# LightHost

./: .gitattributes  .gitignore  .markdownlintignore  AI_UNDERSTANDING.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  license
.github/workflows/: ci.yml  release.yml
AI_UNDERSTANDING/: CMakeLists.txt.aiu.json  CMakePresets.json.aiu.json  _meta.json
AI_UNDERSTANDING/.github/workflows/: ci.yml.aiu.json  release.yml.aiu.json
AI_UNDERSTANDING/Source/: DelayProcessor.hpp.aiu.json  HostStartup.cpp.aiu.json  IconMenu.cpp.aiu.json  IconMenu.hpp.aiu.json  PluginWindow.cpp.aiu.json  PluginWindow.h.aiu.json  PreferencesWindow.cpp.aiu.json  PreferencesWindow.h.aiu.json
Source/: DelayProcessor.hpp  HostStartup.cpp  IconMenu.cpp  IconMenu.hpp  PluginWindow.cpp  PluginWindow.h  PreferencesWindow.cpp  PreferencesWindow.h
lib/vstsdk2.4/pluginterfaces/vst2.x/: aeffect.h  aeffectx.h
